--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <option value="en">English</option>
       <option value="de">Deutsch</option>
     </select>
+    <button id="darkModeToggle" title="Toggle dark mode">🌙</button>
   </div>
 
   <h1 id="mainTitle">Camera Power Consumption App</h1>
