Normalize device structure

--- a/index.html
+++ b/index.html
@@ -146,6 +146,10 @@
       <label for="newWatt" id="consumptionLabel">Consumption (W):</label>
       <input type="number" id="newWatt" step="0.1" placeholder="e.g. 12.5" />
     </div>
+    <div class="form-row" id="cameraJSONField" style="display:none;">
+      <label for="newCameraJSON" id="cameraJSONLabel">Camera Details (JSON):</label>
+      <textarea id="newCameraJSON" style="width:100%;height:120px;"></textarea>
+    </div>
     <div id="batteryFields" style="display:none;">
       <div class="form-row">
         <label for="newCapacity" id="capacityLabel">Capacity (Wh):</label>
