--- a/index.html
+++ b/index.html
@@ -41,23 +41,27 @@
 
   <section id="setup-config">
     <h2 id="deviceSelectionHeading">Device Selection</h2>
-    <div class="form-row">
-      <label for="cameraSelect" id="cameraLabel">Camera:</label>
-      <select id="cameraSelect"></select>
-    </div>
-    <div class="form-row">
-      <label for="monitorSelect" id="monitorLabel">Monitor:</label>
-      <select id="monitorSelect"></select>
-    </div>
-    <div class="form-row">
-      <label for="videoSelect" id="videoLabel">Wireless Video:</label>
-      <select id="videoSelect"></select>
-    </div>
+      <div class="form-row">
+        <label for="cameraSelect" id="cameraLabel">Camera:</label>
+        <input type="text" id="cameraFilter" class="filter-input" placeholder="Filter..." />
+        <select id="cameraSelect"></select>
+      </div>
+      <div class="form-row">
+        <label for="monitorSelect" id="monitorLabel">Monitor:</label>
+        <input type="text" id="monitorFilter" class="filter-input" placeholder="Filter..." />
+        <select id="monitorSelect"></select>
+      </div>
+      <div class="form-row">
+        <label for="videoSelect" id="videoLabel">Wireless Video:</label>
+        <input type="text" id="videoFilter" class="filter-input" placeholder="Filter..." />
+        <select id="videoSelect"></select>
+      </div>
 
     <fieldset>
       <legend id="fizLegend">FIZ (Follow Focus) Systems</legend>
       <div class="form-row">
         <label for="motor1Select" id="fizMotorsLabel">FIZ Motors:</label>
+        <input type="text" id="motorFilter" class="filter-input" placeholder="Filter..." />
         <select id="motor1Select"></select>
       </div>
       <div class="form-row">
@@ -74,6 +78,7 @@
       </div>
       <div class="form-row">
         <label for="controller1Select" id="fizControllersLabel">FIZ Controllers:</label>
+        <input type="text" id="controllerFilter" class="filter-input" placeholder="Filter..." />
         <select id="controller1Select"></select>
       </div>
       <div class="form-row">
@@ -90,12 +95,14 @@
       </div>
       <div class="form-row">
         <label for="distanceSelect" id="distanceLabel">Distance Sensor:</label>
+        <input type="text" id="distanceFilter" class="filter-input" placeholder="Filter..." />
         <select id="distanceSelect"></select>
       </div>
     </fieldset>
 
     <div class="form-row">
       <label for="batterySelect" id="batteryLabel">V-Mount Battery:</label>
+      <input type="text" id="batteryFilter" class="filter-input" placeholder="Filter..." />
       <select id="batterySelect"></select>
     </div>
   </section>
