--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         </div>
         <div class="form-row">
           <label for="cameraPlates" id="cameraPlatesLabel">Battery Plates:</label>
-          <input type="text" id="cameraPlates" placeholder="V-Mount,B-Mount" />
+          <textarea id="cameraPlates" rows="2"></textarea>
         </div>
       </div>
       <div class="camera-subsection">
