--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
       <div class="camera-subsection">
         <h4 id="videoOutputsHeading">Video Outputs</h4>
         <div class="form-row">
-          <label for="cameraVideoOutputs" id="cameraVideoOutputsLabel">Outputs (JSON):</label>
-          <textarea id="cameraVideoOutputs" rows="3"></textarea>
+          <label id="cameraVideoOutputsLabel">Outputs:</label>
+          <div id="videoOutputsContainer" style="flex:1;"></div>
         </div>
       </div>
       <div class="camera-subsection">
