Add FIZ connector dropdown

--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
       <div class="camera-subsection">
         <h4 id="fizConnectorHeading">FIZ Connector</h4>
         <div class="form-row">
-          <label for="cameraFIZConnector" id="cameraFIZConnectorLabel">Connectors (JSON):</label>
-          <textarea id="cameraFIZConnector" rows="3"></textarea>
+          <label id="cameraFIZConnectorLabel">Connectors:</label>
+          <div id="fizConnectorContainer" style="flex:1;"></div>
         </div>
       </div>
       <div class="camera-subsection">
