--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
       <div class="camera-subsection">
         <h4 id="viewfinderHeading">Viewfinder</h4>
         <div class="form-row">
-          <label for="cameraViewfinder" id="cameraViewfinderLabel">Viewfinders (JSON):</label>
-          <textarea id="cameraViewfinder" rows="3"></textarea>
+          <label id="cameraViewfinderLabel">Viewfinders:</label>
+          <div id="viewfinderContainer" style="flex:1;"></div>
         </div>
       </div>
       <div class="camera-subsection">
