Update plate selectors

--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
           <input type="number" id="cameraBatteryLife" step="0.1" />
         </div>
         <div class="form-row">
-          <label for="cameraPlates" id="cameraPlatesLabel">Battery Plates:</label>
-          <textarea id="cameraPlates" rows="2"></textarea>
+          <label id="cameraPlatesLabel">Battery Plates:</label>
+          <div id="cameraPlatesContainer" style="flex:1;"></div>
         </div>
       </div>
       <div class="camera-subsection">
