Add default option for power distribution selector

--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
       <div class="camera-subsection">
         <h4 id="powerDistributionHeading">Power Distribution</h4>
         <div class="form-row">
-          <label for="cameraPowerDist" id="cameraPowerDistLabel">Outputs (JSON):</label>
-          <textarea id="cameraPowerDist" rows="3"></textarea>
+          <label id="cameraPowerDistLabel">Outputs:</label>
+          <div id="cameraPowerDistContainer" style="flex:1;"></div>
         </div>
       </div>
       <div class="camera-subsection">
