--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
       <div class="camera-subsection">
         <h4 id="lensMountHeading">Lens Mount</h4>
         <div class="form-row">
-          <label for="cameraLensMount" id="cameraLensMountLabel">Lens Mount:</label>
-          <input type="text" id="cameraLensMount" placeholder="ARRI PL" />
+          <label id="cameraLensMountLabel">Lens Mount:</label>
+          <div id="lensMountContainer" style="flex:1;"></div>
         </div>
       </div>
       <div class="camera-subsection">
