Make recording media dropdown

--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
       <div class="camera-subsection">
         <h4 id="mediaHeading">Media</h4>
         <div class="form-row">
-          <label for="cameraMedia" id="cameraMediaLabel">Recording Media:</label>
-          <input type="text" id="cameraMedia" placeholder="CFast 2.0" />
+          <label id="cameraMediaLabel">Recording Media:</label>
+          <div id="cameraMediaContainer" style="flex:1;"></div>
         </div>
       </div>
       <div class="camera-subsection">
