--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <select id="languageSelect">
       <option value="en">English</option>
       <option value="de">Deutsch</option>
+      <option value="es">Español</option>
+      <option value="fr">Français</option>
     </select>
     <button id="darkModeToggle" title="Toggle dark mode">☾</button>
   </div>
