--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         </div>
         <div class="form-row">
           <label for="cameraPortType" id="cameraPortTypeLabel">Port Type:</label>
-          <input type="text" id="cameraPortType" />
+          <select id="cameraPortType"></select>
         </div>
         <div class="form-row">
           <label id="cameraPlatesLabel">Battery Plates:</label>
