Add battery mount selection

--- a/index.html
+++ b/index.html
@@ -110,14 +110,18 @@
         <label for="controller4Select"></label>
         <select id="controller4Select"></select>
       </div>
-      <div class="form-row">
-        <label for="distanceSelect" id="distanceLabel">Distance Sensor:</label>
-        <div class="select-wrapper">
-          <input type="text" id="distanceFilter" class="filter-input" placeholder="Filter..." />
-          <select id="distanceSelect"></select>
-        </div>
+    <div class="form-row">
+      <label for="distanceSelect" id="distanceLabel">Distance Sensor:</label>
+      <div class="select-wrapper">
+        <input type="text" id="distanceFilter" class="filter-input" placeholder="Filter..." />
+        <select id="distanceSelect"></select>
       </div>
-    </fieldset>
+    </div>
+    <div class="form-row" id="batteryPlateRow" style="display:none;">
+      <label for="batteryPlateSelect" id="batteryPlateLabel">Battery Plate:</label>
+      <select id="batteryPlateSelect"></select>
+    </div>
+  </fieldset>
 
     <div class="form-row">
       <label for="batterySelect" id="batteryLabel">V-Mount Battery:</label>
