Add setup diagram feature

--- a/index.html
+++ b/index.html
@@ -145,6 +145,11 @@
     <p id="dtapWarning" style="color: red; font-weight: bold;"></p>
   </section>
 
+  <section id="setupDiagram">
+    <h2 id="setupDiagramHeading">Setup Diagram</h2>
+    <div id="diagramContainer"></div>
+  </section>
+
   <section id="batteryComparison" style="display:none;">
     <h2 id="batteryComparisonHeading">Battery Comparison</h2>
     <div id="batteryTableContainer">
