Add setup diagram visualization

--- a/index.html
+++ b/index.html
@@ -142,7 +142,12 @@
     <p><strong><span id="totalCurrent12Label">Total Current (at 12V):</span></strong> <span id="totalCurrent12">0.00</span> A</p>
     <p><strong><span id="batteryLifeLabel">Runtime (estimated):</span></strong> <span id="batteryLife">0.00</span> <span id="batteryLifeUnit">hrs</span></p>
     <p id="pinWarning" style="color: red; font-weight: bold;"></p>
-    <p id="dtapWarning" style="color: red; font-weight: bold;"></p>
+  <p id="dtapWarning" style="color: red; font-weight: bold;"></p>
+  </section>
+
+  <section id="setupDiagram">
+    <h2 id="setupDiagramHeading">Setup Diagram</h2>
+    <div id="diagramArea"></div>
   </section>
 
   <section id="batteryComparison" style="display:none;">
