Improve setup diagram layout and FIZ logic

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
 
   <section id="setupDiagram">
     <h2 id="setupDiagramHeading">Setup Diagram</h2>
+    <p id="compatWarning" style="color: red; font-weight: bold;"></p>
     <div id="diagramArea"></div>
   </section>
 
