Fix note labels and filtering

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
         <input type="text" id="motorGearTypes" />
       </div>
       <div class="form-row">
-        <label for="motorNotes" id="notesLabel">Notes:</label>
+        <label for="motorNotes" id="motorNotesLabel">Notes:</label>
         <input type="text" id="motorNotes" />
       </div>
     </div>
@@ -372,7 +372,7 @@
         <select id="controllerConnectivity"></select>
       </div>
       <div class="form-row">
-        <label for="controllerNotes" id="notesLabel">Notes:</label>
+        <label for="controllerNotes" id="controllerNotesLabel">Notes:</label>
         <input type="text" id="controllerNotes" />
       </div>
     </div>
@@ -398,7 +398,7 @@
         <select id="distanceOutput"></select>
       </div>
       <div class="form-row">
-        <label for="distanceNotes" id="notesLabel">Notes:</label>
+        <label for="distanceNotes" id="distanceNotesLabel">Notes:</label>
         <input type="text" id="distanceNotes" />
       </div>
     </div>
