Add tooltip popup for diagram nodes

--- a/index.html
+++ b/index.html
@@ -148,7 +148,9 @@
   <section id="setupDiagram">
     <h2 id="setupDiagramHeading">Setup Diagram</h2>
     <p id="compatWarning" style="color: red; font-weight: bold;" role="status" aria-live="polite"></p>
-    <div id="diagramArea" role="img" aria-label="Setup diagram"></div>
+    <div id="diagramArea" role="img" aria-label="Setup diagram">
+      <div id="diagramPopup" class="diagram-popup"></div>
+    </div>
   </section>
 
   <section id="batteryComparison" style="display:none;">
