--- a/index.html
+++ b/index.html
@@ -156,6 +156,8 @@
     <div id="diagramArea" role="img" aria-label="Setup diagram" aria-describedby="diagramDesc">
       <div id="diagramPopup" class="diagram-popup"></div>
     </div>
+    <div id="diagramLegend" class="diagram-legend"></div>
+    <button id="downloadDiagram" type="button">Download Diagram</button>
   </section>
 
   <section id="batteryComparison" style="display:none;">
