Replace mouse wheel zoom with buttons

--- a/index.html
+++ b/index.html
@@ -157,7 +157,11 @@
       <div id="diagramPopup" class="diagram-popup"></div>
     </div>
     <div id="diagramLegend" class="diagram-legend"></div>
-    <button id="downloadDiagram" type="button">Download Diagram</button>
+    <div class="diagram-controls">
+      <button id="zoomOut" type="button" title="Zoom out" aria-label="Zoom out">-</button>
+      <button id="zoomIn" type="button" title="Zoom in" aria-label="Zoom in">+</button>
+      <button id="downloadDiagram" type="button">Download Diagram</button>
+    </div>
   </section>
 
   <section id="batteryComparison" style="display:none;">
