Add Italian translation and update language lists

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <option value="de">Deutsch</option>
       <option value="es">Español</option>
       <option value="fr">Français</option>
+      <option value="it">Italiano</option>
     </select>
     <button id="darkModeToggle" title="Toggle dark mode" aria-label="Toggle dark mode">☾</button>
     <button id="helpButton" aria-haspopup="dialog" aria-controls="helpDialog" title="Help">?</button>
