Add pink mode toggle

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <option value="fr">Français</option>
     </select>
     <button id="darkModeToggle" title="Toggle dark mode" aria-label="Toggle dark mode">☾</button>
+    <button id="pinkModeToggle" title="Toggle pink mode" aria-label="Toggle pink mode">🐴</button>
     <button id="helpButton" aria-haspopup="dialog" aria-controls="helpDialog" title="Help">?</button>
   </div>
 
