--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
       <button id="zoomIn" type="button" title="Zoom in" aria-label="Zoom in">+</button>
       <button id="downloadDiagram" type="button">Download Diagram</button>
     </div>
+    <p id="diagramHint" class="diagram-hint"></p>
   </section>
 
   <section id="batteryComparison" style="display:none;">
