Expand help dialog

--- a/index.html
+++ b/index.html
@@ -500,6 +500,14 @@
           <h3>Power Calculator</h3>
           <p>Select a battery to see estimated run time. Warnings appear if your configuration exceeds the battery output limits.</p>
         </section>
+        <section data-help-section id="shortcuts">
+          <h3>Keyboard Shortcuts</h3>
+          <ul>
+            <li><kbd>?</kbd>, <kbd>H</kbd> or <kbd>F1</kbd> – toggle help</li>
+            <li><kbd>Escape</kbd> – close dialogs</li>
+            <li>Type in dropdowns to filter options</li>
+          </ul>
+        </section>
         <section data-help-section id="faq">
           <h3>FAQ</h3>
           <details class="faq-item">
