--- a/index.html
+++ b/index.html
@@ -547,6 +547,30 @@
             <summary>What do the warning colors mean?</summary>
             <p>Orange messages indicate the setup is nearing the battery's output limit. Red warnings mean the estimated current exceeds the safe rating and could damage the battery.</p>
           </details>
+          <details class="faq-item">
+            <summary>Where are my setups saved?</summary>
+            <p>Setups and device edits are stored in your browser's <code>localStorage</code>. Use Export/Import to back them up or share them.</p>
+          </details>
+          <details class="faq-item">
+            <summary>Does the planner work offline?</summary>
+            <p>Yes. Once the fonts and database are cached on first load, all features continue to work without an internet connection.</p>
+          </details>
+          <details class="faq-item">
+            <summary>How do I reset everything to the defaults?</summary>
+            <p>Open the device editor and choose <em>Export and Revert</em> to restore the default database. Delete setups individually using the Delete button.</p>
+          </details>
+          <details class="faq-item">
+            <summary>How do I change the language?</summary>
+            <p>Use the dropdown in the top right to pick a language. The planner remembers your choice for the next visit.</p>
+          </details>
+          <details class="faq-item">
+            <summary>How can I print a setup overview?</summary>
+            <p>Save the setup, then click <em>Generate Overview</em> in Setup Actions and print from the new tab.</p>
+          </details>
+          <details class="faq-item">
+            <summary>How do I compare different batteries?</summary>
+            <p>The Battery Comparison section shows estimated run time for all batteries once a configuration is calculated.</p>
+          </details>
         </section>
       </div>
     </div>
