docs: add pink mode help

--- a/index.html
+++ b/index.html
@@ -525,6 +525,10 @@
           <h3>Dark Mode</h3>
           <p>Toggle the moon button next to the language selector to switch between light and dark themes. Your choice is remembered for the next visit.</p>
         </section>
+        <section data-help-section id="pinkModeHelp">
+          <h3>Pink Mode</h3>
+          <p>Click the horse button to enable an extra pink theme with unicorn vibes. The setting persists just like dark mode.</p>
+        </section>
         <section data-help-section id="shortcuts">
           <h3>Keyboard Shortcuts</h3>
           <ul>
